--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
         <h1>Etch-A-Sketch</h1>
       </header>
       <section>
-        <div class="countainer">
-        </div>
+        <div class="countainer"></div>
         <div class="btn1-container">
           <button class="btn btn-black">black</button>
           <button class="btn btn-random">random</button>
           <button class="btn btn-clear">clear</button>
         </div>
         <div class="btn2-container">
-            <button class="color-picker">color picker</button>
-            <div class="sidebar-container">
-                <div class="sidebar"></div>
-                <div class="vlaue-sidebar"></div>
-            </div>
+          <button class="color-picker">color picker</button>
+          <div class="sidebar-container">
+            <div class="sidebar"></div>
+            <div class="vlaue-sidebar"></div>
+          </div>
         </div>
       </section>
+      <footer class="footer">
+        CopyRight<span>©</span>Amir Heydari<i class="fab fa-github"></i>
+      </footer>
     </main>
   </body>
 </html>
