--- a/index.html
+++ b/index.html
@@ -4,28 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>ETCH-A-SKETCH</title>
   </head>
   <body>
     <main>
-      <header class="header">
-        <h1 class="header-h1">Etch-A-Sketch</h1>
+      <header>
+        <h1>Etch-A-Sketch</h1>
       </header>
-      <section>
-        <div class="countainer"></div>
+      <section class="section">
         <div class="btn1-container">
           <button class="btn btn-black">black</button>
           <button class="btn btn-random">random</button>
           <button class="btn btn-clear">clear</button>
-        </div>
-        <div class="btn2-container">
           <button class="color-picker">color picker</button>
           <div class="sidebar-container">
             <div class="sidebar"></div>
-            <div class="vlaue-sidebar"></div>
           </div>
         </div>
+        <div class="countainer"></div>
       </section>
       <footer class="footer">
         CopyRight<span>©</span>Amir Heydari<i class="fab fa-github"></i>
