complete structure of index.html

--- a/index.html
+++ b/index.html
@@ -8,24 +8,20 @@
     <title>ETCH-A-SKETCH</title>
   </head>
   <body>
-    <main>
-      <header>
-        <h1>Etch-A-Sketch</h1>
-      </header>
+    <main class="main">
       <section class="section">
+        <h1>Etch A Sketch</h1>
+        <div class="countainer"></div>
         <div class="btn1-container">
           <button class="btn btn-black">black</button>
           <button class="btn btn-random">random</button>
           <button class="btn btn-clear">clear</button>
-          <button class="color-picker">color picker</button>
-          <div class="sidebar-container">
-            <div class="sidebar"></div>
-          </div>
+          <button class="btn color-picker">color picker</button>
+          <div class="sidebar"></div>
         </div>
-        <div class="countainer"></div>
       </section>
-      <footer class="footer">
-        CopyRight<span>©</span>Amir Heydari<i class="fab fa-github"></i>
+      <footer class="footer"> 
+        <p> CopyRight<span>©</span>Amir Heydari</p> 
       </footer>
     </main>
   </body>
