--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <link rel="stylesheet" href="style.css" />
     <title>ETCH-A-SKETCH</title>
   </head>
-  <body>
-    <main class="main">
-      <section class="section">
-        <h1>Etch A Sketch</h1>
-        <div class="countainer"></div>
+  <body class="body">
+      <div class="countainer">
+        <h1 class="h1">Etch A Sketch</h1>
+        <div class="countainer-ganerate"></div>
         <div class="btn1-container">
           <button class="btn btn-black">black</button>
           <button class="btn btn-random">random</button>
           <button class="btn btn-clear">clear</button>
           <button class="btn color-picker">color picker</button>
-          <div class="sidebar"></div>
-        </div>
-      </section>
+          <div class="sidebar-container">
+            <input type="range" min="0" max="100" value="50" class="sidebar">
+          </div>
+        </div>   
+      </div>
       <footer class="footer"> 
         <p> CopyRight<span>©</span>Amir Heydari</p> 
       </footer>
-    </main>
   </body>
 </html>
