add style to slider in style.css

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
           <button class="btn btn-random">random</button>
           <button class="btn btn-clear">clear</button>
           <button class="btn color-picker">color picker</button>
-          <div class="sidebar-container">
-            <input type="range" min="0" max="100" value="50" class="sidebar">
+          <div class="slider-container">
+            <input type="range" min="0" max="100" value="0" class="slider">
+            <!-- <span class="rs-lable">0</span> -->
           </div>
         </div>   
       </div>
