--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="/app.js" defer></script>
     <title>ETCH-A-SKETCH</title>
   </head>
   <body class="body">
       <div class="countainer">
         <h1 class="h1">Etch A Sketch</h1>
-        <div class="countainer-ganerate"></div>
+        <div class="countainer-ganerate" id="div1"></div>
         <div class="btn1-container">
-          <button class="btn btn-black">black</button>
+          <button class="btn btn-black" >black</button>
           <button class="btn btn-random">random</button>
           <button class="btn btn-clear">clear</button>
           <button class="btn color-picker">color picker</button>
           <div class="slider-container">
             <input type="range" min="0" max="100" value="0" class="slider">
-            <!-- <span class="rs-lable">0</span> -->
+            <span class="display-value">0</span>
           </div>
         </div>   
       </div>
