edite stracture for edit design

--- a/index.html
+++ b/index.html
@@ -9,22 +9,19 @@
     <title>ETCH-A-SKETCH</title>
   </head>
   <body class="body">
-      <div class="countainer">
-        <h1 class="h1">Etch A Sketch</h1>
-        <div class="countainer-ganerate" id="div1"></div>
-        <div class="btn1-container">
-          <button class="btn btn-black" >black</button>
+    <div class="countainer">
+      <h1 class="h1">Etch A Sketch</h1>
+      <div class="btn1-container">
+        <div class="container-button">
+          <button class="btn btn-black">black</button>
           <button class="btn btn-random">random</button>
           <button class="btn btn-clear">clear</button>
           <button class="btn color-picker">color picker</button>
-          <div class="slider-container">
-            <input type="range" min="0" max="100" value="0" class="slider">
-            <span class="display-value">0</span>
-          </div>
-        </div>   
+          <input type="range" min="0" max="100" value="0" class="slider" />
+          <span class="display-value">0</span>
+        </div>
+        <div class="countainer-ganerate" id="div1"></div>
       </div>
-      <footer class="footer"> 
-        <p> CopyRight<span>©</span>Amir Heydari</p> 
-      </footer>
+    </div>
   </body>
 </html>
