add logic and little design

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <button class="btn btn-random">random</button>
           <button class="btn btn-clear">clear</button>
           <button class="btn color-picker">color picker</button>
-          <input type="range" min="0" max="100" value="0" class="slider" />
-          <span class="display-value">0</span>
+          <input type="range" min="2" max="64" value="16" class="slider" />
+          <span class="display-value">16 × 16</span>
         </div>
         <div class="countainer-ganerate" id="div1"></div>
       </div>
