add iput for color and clear code for final

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <button class="btn btn-black">black</button>
           <button class="btn btn-random">random</button>
           <button class="btn btn-clear">clear</button>
-          <button class="btn color-picker">color picker</button>
+          <input type="color" value="#ffd60a" class="color-picker" />
           <input type="range" min="2" max="64" value="16" class="slider" />
           <span class="display-value">16 × 16</span>
         </div>
